--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <link rel="stylesheet" href="vendor/fontawesome/css/all.min.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="vendor/v6.4.3-dist/ol.css">
     </head>
     <body class="bg-dark container-fluid vh-100">
         <header class="text-white row h-25">
             <div>
-              <div class="col-sm-12 col-md-4 text-center mx-auto">
-                <span><i class="fas fa-globe fs-1 mt-3"></i></span>
-              </div>
-            </div>
-            <div>
-                <div class="col-sm-12 col-md-4 text-center mx-auto">
+                <div class="col-sm-12 col-md-4 text-center mx-auto mt-5">
                     <h1>Sismos Chile</h1>
+                    <i class="fas fa-globe h1 mt-1"></i>
                 </div>
             </div>
         </header>
@@ -28,22 +25,17 @@
         
         <section class="d-none">
         <div class="col-sm-12 col-md-6 col-lg-3 mb-3 mt-3 molde-sismo">
-            <div class="card">
+            <div class="card border-0">
             <div class="card-header bg-dark bg-gradient text-white">
                 <span class="card-title nombre-titulo">Magnitud</span>
             </div>
             <div class="card-body text-center">
-                <img src="" class="imagen-personaje img-fluid">
+                <div class="map w-100"></div>
             </div>
             <div class="card-footer">
                     <p class="d-block fecha "></p>
                     <p class="d-block magnitud "></p>
                     <p class="d-block profundidad "></p>
-                <div class="d-flex justify-content-between">
-                    
-                    <button class="btn col-md-6 btn-secondary"><<<</button>
-                    <button class="btn col-md-6 btn-secondary">>>></button>
-                </div>
             </div>
             </div>
         </div>
@@ -54,6 +46,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-        <script src="init.js"></script>
+        <script src="js/init.js"></script>
+        <script src="vendor/v6.4.3-dist/ol.js"></script>
     </body>
 </html>
