--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <link rel="stylesheet" href="vendor/fontawesome/css/all.min.css">
         <link rel="stylesheet" href="vendor/v6.4.3-dist/ol.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="manifest" href="manifest.json">
+
+        <!--Android-->
+        <meta name="theme-color" content="#adff2f">
 
     </head>
     <body class="bg-success container-fluid vh-100">
